--- a/public/styles.css
+++ b/public/styles.css
@@ -38,11 +38,53 @@ hr {
 }
 
 .checkin-text {
+  display: inline-block;
+  vertical-align: middle;
   font-weight: normal;
   font-size: 17px;
   color: grey;
-  display: inline-block;
   width: 40%;
-  vertical-align: middle;
   padding: 8px;
+}
+
+.date-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  width: 42px;
+  height: 42px;
+  border: 1px solid grey;
+  margin-left: -1px;
+  margin-bottom: -1px;
+}
+
+.booked {
+  color: lightgrey;
+}
+
+.hoverable:hover {
+  background-color:rgba(0, 0, 0, 0.2)
+}
+
+
+.empty-box {
+  width: 42px;
+  height: 42px;
+  border: 1px solid transparent;
+  margin-left: -1px;
+  margin-bottom: -1px;
+}
+
+#calendar-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 301px;
+}
+
+#dates-container {
+  display:flex;
+  align-content: center;
+  justify-content: center;
+  width: 335px;
 }
