--- a/public/styles.css
+++ b/public/styles.css
@@ -118,3 +118,45 @@ hr {
   justify-content: space-around;
   margin-top: 10px;
 }
+
+.star-ratings-css {
+  unicode-bidi: bidi-override;
+  color: grey;
+  font-size: 10px;
+  height: 10px;
+  width: 50px;
+  margin: 0;
+  position: relative;
+  text-shadow: 0px 1px 0 #a2a2a2;
+}
+
+.star-ratings-css-top {
+  color: #007D8C;
+  padding: 0;
+  position: absolute;
+  z-index: 1;
+  display: block;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+}
+
+.star-ratings-css-bottom {
+  padding: 0;
+  display: block;
+  z-index: 0;
+}
+
+.price-name {
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.small-text {
+  font-size: 12px;
+  font-weight: 500;
+}
+
+.arrow {
+  height: 24px; width: 24px; display: block; fill: currentcolor;
+}
