--- a/public/styles.css
+++ b/public/styles.css
@@ -133,7 +133,7 @@ hr {
   width: 50px;
   margin: 0;
   position: relative;
-  text-shadow: 0px 1px 0 #a2a2a2;
+  /* text-shadow: 0px 1px 0 #a2a2a2; */
 }
 
 .star-ratings-css-top {
@@ -142,8 +142,8 @@ hr {
   position: absolute;
   z-index: 1;
   display: block;
-  top: 0;
-  left: 0;
+  /* top: 0;
+  left: 0; */
   overflow: hidden;
 }
 
@@ -170,4 +170,9 @@ hr {
   fill: currentcolor;
   position: relative;
   top: 4px
+}
+
+.rating {
+  display: flex;
+  margin-top: 1px;
 }
