--- a/public/styles.css
+++ b/public/styles.css
@@ -125,7 +125,7 @@ hr {
   margin-top: 10px;
 }
 
-.star-ratings-css {
+.star-ratings {
   unicode-bidi: bidi-override;
   color: grey;
   font-size: 10px;
@@ -136,7 +136,7 @@ hr {
   /* text-shadow: 0px 1px 0 #a2a2a2; */
 }
 
-.star-ratings-css-top {
+.star-ratings-top {
   color: #007D8C;
   padding: 0;
   position: absolute;
@@ -147,7 +147,7 @@ hr {
   overflow: hidden;
 }
 
-.star-ratings-css-bottom {
+.star-ratings-bottom {
   padding: 0;
   display: block;
   z-index: 0;
@@ -175,4 +175,26 @@ hr {
 .rating {
   display: flex;
   margin-top: 1px;
+}
+
+.popup {  
+  position: fixed;  
+  width: 100%;  
+  height: 100%;  
+  top: 0;  
+  left: 0;  
+  right: 0;  
+  bottom: 0;  
+  margin: auto;  
+  background-color: rgba(0,0,0, 0.5);  
+}  
+.popup\_inner {  
+  position: absolute;  
+  left: 25%;  
+  right: 25%;  
+  top: 25%;  
+  bottom: 25%;  
+  margin: auto;  
+  border-radius: 20px;  
+  background: white;  
 }
