--- a/public/styles.css
+++ b/public/styles.css
@@ -133,7 +133,6 @@ hr {
   width: 50px;
   margin: 0;
   position: relative;
-  /* text-shadow: 0px 1px 0 #a2a2a2; */
 }
 
 .star-ratings-top {
@@ -142,8 +141,6 @@ hr {
   position: absolute;
   z-index: 1;
   display: block;
-  /* top: 0;
-  left: 0; */
   overflow: hidden;
 }
 
@@ -178,23 +175,14 @@ hr {
 }
 
 .popup {  
-  position: fixed;  
-  width: 100%;  
-  height: 100%;  
-  top: 0;  
-  left: 0;  
-  right: 0;  
-  bottom: 0;  
-  margin: auto;  
-  background-color: rgba(0,0,0, 0.5);  
-}  
-.popup\_inner {  
   position: absolute;  
-  left: 25%;  
-  right: 25%;  
-  top: 25%;  
-  bottom: 25%;  
-  margin: auto;  
+  width: 335px;  
+  height: auto;  
+  background-color: white;
+} 
+
+.popup\_inner {  
+  position: relative;  
   border-radius: 20px;  
   background: white;  
 }
