removed all !important from css

--- a/public/styles.css
+++ b/public/styles.css
@@ -335,26 +335,26 @@ hr {
 }
 
 .next-prev-button {
-  cursor: pointer !important;
-    user-select: none !important;
-    background-color: rgb(255, 255, 255) !important;
-    color: rgb(117, 117, 117) !important;
-    /* position: absolute !important; */
-    top: 18px !important;
-    line-height: 0.78 !important;
-    right: 22px !important;
-    margin: 0px !important;
-    border-width: 1px !important;
-    border-style: solid !important;
-    border-color: rgb(228, 231, 231) !important;
-    border-image: initial !important;
-    border-radius: 3px !important;
-    padding: 6px 9px !important;
+  cursor: pointer;
+    user-select: none;
+    background-color: rgb(255, 255, 255);
+    color: rgb(117, 117, 117);
+    /* position: absolute; */
+    top: 18px;
+    line-height: 0.78;
+    right: 22px;
+    margin: 0px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(228, 231, 231);
+    border-image: initial;
+    border-radius: 3px;
+    padding: 6px 9px;
 }
 
 .next-prev-button-svg {
-  height: 19px !important;
-    width: 19px !important;
-    fill: rgb(130, 136, 138) !important;
-    display: block !important;
+  height: 19px;
+    width: 19px;
+    fill: rgb(130, 136, 138);
+    display: block;
 }
